--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("https://sample-site.github.io/background-home-desktop.jpg");
+  background-image: url("../background-home-desktop.jpg");
   background-size: 100% 1000px;
   background-repeat: no-repeat;
   color: white;
