--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("sample-site/background-home-desktop.jpg");
+  background-image: url("https://github.com/anshmangla/sample-site/blob/665066e165ee14b5c294dbfc06a6c7f42062c0bb/background-home-desktop.jpg");
   background-size: 100% 1000px;
   background-repeat: no-repeat;
   color: white;
