--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body{
-  background-image: url("/space.jpg");
+  background-image: url("https://github.com/anshmangla/sample-site/blob/main/space.jpg");
   background-size: 100% 1000px;
   background-repeat: no-repeat;
   color: white;
